frontend/src/index.css
/* CSS Reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  font-size: 100%;
  line-height: 1.5;
  /* Padding for fixed top navbar */
  padding-top: 36px;
}

body {
  font-family: Arial, sans-serif;
  background-color: #fff;
  color: #000;
}

a {
  text-decoration: none;
  color: inherit;
}

ul,
ol {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}
/* /CSS Reset */

::selection {
  background-color: red;
}

